# itmo-fp

./: README.md  stack.yaml
hw0/: README.md  hw0.cabal
hw0/src/: Task1.hs  Task2.hs  Task3.hs  Task4.hs  Task5.hs  Task6.hs  Task7.hs
hw1/: README.md  hw1.cabal
hw1/src/: Block1.hs  Block2.hs  Block3.hs  Block4.hs  Block5.hs  Block6.hs
hw1/test/: Block1Spec.hs  Block2Spec.hs  Block3Spec.hs  Block4Spec.hs  Block5Spec.hs  Block6Spec.hs
hw2/: .editorconfig  .gitignore  README.md  hw2.cabal  stack.yaml
hw2/app/: Main.hs
hw2/src/: ProgramSettings.hs
hw2/src/Command/: Command.hs  Handler.hs  Parser.hs
hw2/src/FileSystem/: Exception.hs  FileSystem.hs  Sync.hs
hw2/src/Utils/: Utils.hs
hw2/test/: HandlerSpec.hs  ParserSpec.hs
hw3/: .gitignore  LICENSE  README.md  hw3.cabal
hw3/app/: Main.hs
hw3/benchmark/: Main.hs  Task1Bench.hs
hw3/benchmark/Utils/: Task1BenchUtils.hs
hw3/src/: Task1.hs  Task2.hs  Task5.hs  Task5Practice.hs  Task6.hs  Task7.hs  Task8.hs
hw3/src/Utils/: FSException.hs  FSUtils.hs  Grid.hs  ListZipper.hs
hw3/test/: Task1Spec.hs  Task2Spec.hs  Task5Spec.hs  Task6Spec.hs  Task7Spec.hs  Task8Spec.hs
hw3/test/Config/: ConfigFor567.hs  ConfigFor8.hs
