name:                hw1
version:             0.1.0.0
synopsis:            Synopsis for task 1
description:         Task 1 for FP ITMO course

homepage:            https://github.com/B-O-O-P/fp-homework/tree/master/hw1#readme
license:             MIT
license-file:        LICENSE
author:              Dmitriy
maintainer:          dimkanut@gmail.com
copyright:           2020 Dmitriy

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:
                       Block1
                       Block2
                       Block3
                       Block4
                       Block5
                       Block6
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , mtl
  default-language:    Haskell2010

test-suite hw1-test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , hw1
                     , hspec
  other-modules:       Block1Spec
                     , Block2Spec
                     , Block3Spec
                     , Block4Spec
                     , Block5Spec
                     , Block6Spec
  default-language:    Haskell2010