name:                hw2
version:             0.1.0.0
synopsis:            Synopsis for task 2
description:         Task 2 for FP ITMO course

homepage:            https://github.com/fp-ctd-itmo/hw2-B-O-O-P/hw2#readme
license:             MIT
license-file:        LICENSE
author:              Dmitriy
maintainer:          dimkanut@gmail.com
copyright:           2020 Dmitriy

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
                     , src/Command
                     , src/FileSystem
                     , src/Utils
  exposed-modules:     Command.Parser
                     , Command.Command
                     , Command.Handler
                     , FileSystem.FileSystem
                     , FileSystem.Sync
                     , FileSystem.Exception
                     , Utils.Utils
                     , ProgramSettings
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , bytestring
                     , text
                     , time
                     , optparse-applicative
                     , directory
                     , filepath
                     , mtl
  default-language:    Haskell2010

executable hw2
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hw2
                     , mtl
  default-language:    Haskell2010

test-suite hw2-test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , hw2
                     , hspec
                     , filepath
                     , bytestring
                     , text
  other-modules:       HandlerSpec
                     , ParserSpec
  default-language:    Haskell2010